jwt auth, fix bugs unit tests register and login forms, refactoring codes
