# src/app/Http/Requests/RegisterForm.php
@@ -1,0 +1,26 @@
+<?php
+
+
+namespace App\Http\Requests;
+
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Support\Facades\Validator;
+
+class RegisterForm extends FormRequest
+{
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string|max:255',
+            'email' => 'required|string|email|max:255|unique:users',
+            'password' => 'required|string|min:6',
+        ];
+    }
+
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+}
